<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.shiva.firebaselogin.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_rounded_bg"
            android:orientation="vertical"
            android:padding="24dp">

            <EditText
                android:id="@+id/username"
                style="@style/EditText"
                android:hint="@string/username_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password"
                style="@style/EditText"
                android:layout_marginTop="20dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Don't have account?"
            android:textColor="@android:color/black"
            android:layout_below="@+id/login"
            android:layout_marginTop="10dp"
            android:id="@+id/textView"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
